--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,9 +15,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        android:theme="@style/Theme.Vesper_App">
         <activity android:name=".logins.SignupActivity"
             android:noHistory="true"/>
+
         <activity android:name=".logins.LoginActivity"
             android:noHistory="true">
             <intent-filter>
@@ -26,11 +27,20 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="com.company.api_research.MainActivity" />
             </intent-filter>
         </activity>
+
+        <service
+            android:name=".services.FCMServiceHandler"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
     </application>
 
 </manifest>
