--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,8 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
+    implementation "androidx.cardview:cardview:1.0.0"
+
 
     // Firebase libraries
     implementation platform('com.google.firebase:firebase-bom:26.8.0')
